infra/controllers/traefik/traefik.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-external
  namespace: traefik-system
  annotations:
    metallb.universe.tf/address-pool: premhome-gc1
    external-dns.alpha.kubernetes.io/hostname: "*.yadunut.dev,yadunut.dev"
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      targetPort: web
    - name: websecure
      port: 443
      targetPort: websecure
    - name: git-ssh
      port: 2222
      targetPort: git-ssh
  selector:
    app.kubernetes.io/name: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-internal
  namespace: traefik-system
spec:
  type: ClusterIP
  ports:
    - name: traefik
      port: 80
      targetPort: traefik
  selector:
    app.kubernetes.io/name: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-ingress
  namespace: traefik-system
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: authentik-system-authentik@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: traefik.i.yadunut.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-internal
            port:
              name: traefik
  tls:
  - hosts:
    - traefik.i.yadunut.dev
    secretName: wildcard-cert-i.yadunut.dev-prod
